force-app/main/default/objects/TimeTrade_for_SE__c/TimeTrade_for_SE__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TimeTrade for SE</label>
</CustomObject>