force-app/main/default/objects/TimeTrade_for_SE__c/fields/Check_Customer_Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Check_Customer_Key_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Customer Key Points</label>
    <type>Checkbox</type>
</CustomField>