force-app/main/default/objects/TimeTrade_for_SE__c/fields/Check_Customer_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Check_Customer_Success_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Customer Success Criteria</label>
    <type>Checkbox</type>
</CustomField>