force-app/main/default/objects/TimeTrade_for_SE__c/fields/DummyContact__c.field-meta.xml
<CustomField>
    <fullName>DummyContact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DummyContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>