force-app/main/default/objects/TimeTrade_for_SE__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>