force-app/main/default/objects/TimeTrade_for_SE__c/fields/Location_Info__c.field-meta.xml
<CustomField>
    <fullName>Location_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>