force-app/main/default/objects/TimeTrade_for_SE__c/fields/Location_type__c.field-meta.xml
<CustomField>
    <fullName>Location_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>