force-app/main/default/objects/TimeTrade_for_SE__c/fields/ShowAvailabilityAfterMinutes__c.field-meta.xml
<CustomField>
    <fullName>ShowAvailabilityAfterMinutes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ShowAvailabilityAfterMinutes</label>
    <length>25</length>
    <type>Text</type>
</CustomField>