force-app/main/default/objects/TimeTrade_for_SE__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Time Trade Subject for each selected Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>250</length>
    <type>Text</type>
</CustomField>